# atsamx7x-rust

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.template  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  README.md.template  rust-toolchain.toml  svd  update-pacs.sh  update.py
boards/atsame70_xpro/: Cargo.toml  README.md  openocd.cfg  openocd.gdb
boards/atsame70_xpro/.cargo/: config
boards/atsame70_xpro/examples/: blinky.rs  blinky_delay.rs  blinky_irq.rs  efc.rs  gmac.rs  toggle_led_on_button.rs  usart_loopback.rs  usb_serial_echo.rs  utmi_clock_out.rs
boards/atsame70_xpro/src/: main.rs
boards/atsamv71-xult/: Cargo.toml  README.md
boards/atsamv71-xult/examples/: blinky.rs  toggle_led_on_button.rs  utmi_clock_out.rs
boards/atsamv71-xult/src/: main.rs
boards/atsamv71_xult/: Cargo.toml  Embed.toml  README.md  embed.gdb  memory.x  openocd.cfg
boards/atsamv71_xult/examples/: blinky.rs  blinky_delay.rs  blinky_irq.rs  blinky_tc.rs  blinky_tc_irq.rs  bootloader.rs  efc.rs  mcan.rs  minimal-bootloader.rs  periodic_adc_sample.rs  pwm.rs  pwm_tc_freq_meas.rs  spi_loopback.rs  toggle_led_on_button.rs  twi_babble.rs  uart_interrupts.rs  uart_loopback_test.rs  udp.rs  usart_loopback.rs  usb_serial_echo.rs  utmi_clock_out.rs
boards/atsamv71_xult/src/: main.rs
hal/: Cargo.toml  README.md  build.rs  build.sh  rust-toolchain.toml
hal/src/: afec.rs  can.rs  efc.rs  event_system.rs  generics.rs  gmac.rs  lib.rs  pio.rs  pmc.rs  pwm.rs  rtt.rs  serial.rs  tc.rs  usb.rs  watchdog.rs
hal/src/clocks/: hcc.rs  mainck.rs  mck.rs  mod.rs  pck.rs  pllack.rs  slck.rs  upllck.rs
hal/src/pio/: bank.rs  dynpin.rs  mod.rs  pin.rs  reg.rs
hal/src/serial/: mod.rs  spi.rs  twi.rs  uart.rs
hal/src/serial/usart/: mod.rs  spi.rs  uart.rs
hal/src/tc/: capture.rs  generate.rs  mod.rs
pac/atsame70q21b/: Cargo.toml  README.md
pac/atsame70q21b/src/: lib.rs  smc.rs  uart0.rs
pac/atsame70q21b/src/acc/: acc_acr.rs
pac/atsame70q21b/src/aes/: aes_ivr.rs  aes_tagr.rs
pac/atsame70q21b/src/dacc/: dacc_acr.rs
pac/atsame70q21b/src/gmac/: cse.rs  dcfgr.rs  gmac_bcfr.rs  gmac_cbsisqb.rs  gmac_dcfgr.rs  gmac_dtf.rs  gmac_eftsh.rs  gmac_fr.rs  gmac_ierpq.rs  gmac_imr.rs  gmac_jr.rs  gmac_lc.rs  gmac_mft.rs  gmac_orhi.rs  gmac_orlo.rs  gmac_peftsh.rs  gmac_rbqbapq.rs  gmac_rbsrpq.rs  gmac_rse.rs  gmac_scf.rs  gmac_st2er.rs  gmac_tbft127.rs  gmac_tbft255.rs  gmac_tbft511.rs  gmac_tbqbapq.rs  gmac_tidm2.rs  gmac_txlpi.rs  gmac_txlpitime.rs  gmac_ur.rs  ofr.rs  otlo.rs  pefrsh.rs  rsr.rs
pac/atsame70q21b/src/hsmci/: dtor.rs  hsmci_blkr.rs  hsmci_cfg.rs  hsmci_imr.rs  hsmci_rdr.rs  hsmci_sdcr.rs  hsmci_wpmr.rs
pac/atsame70q21b/src/i2sc0/: i2sc_cr.rs  i2sc_rhr.rs  i2sc_thr.rs
pac/atsame70q21b/src/icm/: icm_cfg.rs  icm_ier.rs
pac/atsame70q21b/src/isi/: isi_cfg1.rs  wpmr.rs
pac/atsame70q21b/src/lockbit/: word2.rs
pac/atsame70q21b/src/matrix/: ccfg_sysio.rs  wpmr.rs
pac/atsame70q21b/src/mcan0/: mcan_ndat1.rs  mcan_ndat2.rs  mcan_txbc.rs  mcan_txbcie.rs  mcan_txbrp.rs  mcan_txbto.rs  txbcie.rs  txbcr.rs
pac/atsame70q21b/src/pioa/: pcisr.rs  pio_frlhsr.rs  pio_locksr.rs  pio_ower.rs  pio_pcmr.rs
pac/atsame70q21b/src/pmc/: ckgr_pllar.rs  pcsr0.rs  pmc_pcdr1.rs  pmc_pcer1.rs  pmc_pcsr0.rs  pmc_pcsr1.rs  pmc_slpwk_asr1.rs  pmc_slpwk_dr1.rs  pmc_slpwk_er0.rs  pmc_slpwk_sr1.rs  pmc_wpmr.rs  scdr.rs
pac/atsame70q21b/src/pwm0/: pwm_cmupd1.rs  pwm_etrg2.rs  pwm_fcr.rs  pwm_fpv2.rs  pwm_idr1.rs  pwm_ier2.rs  pwm_osc.rs  pwm_scup.rs  pwm_sspup.rs
pac/atsame70q21b/src/qspi/: smr.rs
pac/atsame70q21b/src/rswdt/: cr.rs
pac/atsame70q21b/src/rtc/: rtc_timalr.rs
pac/atsame70q21b/src/sdramc/: sdramc_cfr1.rs  sdramc_cr.rs  sdramc_idr.rs  sdramc_isr.rs  sdramc_ocms.rs  sdramc_ocms_key1.rs  sdramc_ocms_key2.rs
pac/atsame70q21b/src/smc/: smc_cs_number.rs  smc_key1.rs  smc_key2.rs  smc_ocms.rs
pac/atsame70q21b/src/spi0/: spi_idr.rs  tdr.rs
pac/atsame70q21b/src/ssc/: ssc_rc1r.rs
pac/atsame70q21b/src/trng/: trng_imr.rs  trng_odata.rs
pac/atsame70q21b/src/twihs0/: twihs_smbtr.rs  twihs_swmr.rs  twihs_thr.rs  twihs_wpmr.rs
pac/atsame70q21b/src/uart0/: sr.rs
pac/atsame70q21b/src/usart0/: us_brgr.rs  us_cr_spi_mode.rs  us_csr_spi_mode.rs  us_ier_lin_mode.rs  us_imr_lon_mode.rs  us_lonprio.rs
pac/atsame70q21b/src/usbhs/: devctrl.rs  deveptimr_iso_mode.rs  usbhs_devepticr_ctrl_mode.rs  usbhs_deveptidr_ctrl_mode.rs  usbhs_deveptimr_ctrl_mode.rs  usbhs_deveptisr_blk_mode.rs  usbhs_deveptisr_ctrl_mode.rs  usbhs_hstier.rs  usbhs_hstpipimr_intrpt_mode.rs  usbhs_hstpipinrq.rs  usbhs_sfr.rs
pac/atsame70q21b/src/xdmac/: xdmac_ge.rs  xdmac_grwr.rs  xdmac_gtype.rs  xdmac_gws.rs
pac/atsams70j20/: Cargo.toml  README.md
pac/atsams70j20/src/: efc.rs  lib.rs  lockbit.rs  matrix.rs  rstc.rs  twihs0.rs
pac/atsams70j20/src/acc/: acc_idr.rs
pac/atsams70j20/src/aes/: aes_imr.rs  aes_tagr.rs
pac/atsams70j20/src/afec0/: afec_cgr.rs  afec_cocr.rs  afec_cwr.rs  afec_over.rs  afec_wpmr.rs
pac/atsams70j20/src/dacc/: dacc_chsr.rs  dacc_cr.rs  dacc_mr.rs  dacc_trigr.rs
pac/atsams70j20b/: Cargo.toml  README.md  device.x
pac/atsams70j20b/src/: lib.rs  matrix.rs  rtt.rs  usart0.rs  xdmac.rs
pac/atsams70j21/: Cargo.toml  README.md
pac/atsams70j21/src/: chipid.rs  gpbr.rs  icm.rs  lib.rs  matrix.rs  pmc.rs  rswdt.rs  ssc.rs  usbhs.rs  xdmac.rs
pac/atsams70n19/: Cargo.toml  README.md
pac/atsams70n19/src/: aes.rs  lib.rs  lockbit.rs  qspi.rs  rstc.rs  spi0.rs  ssc.rs  tc0.rs  usart0.rs  usbhs.rs
pac/atsams70n20/: Cargo.toml  README.md  device.x
pac/atsams70n20/src/: acc.rs  icm.rs  lib.rs  matrix.rs  rswdt.rs  usbhs.rs  utmi.rs  xdmac.rs
pac/atsams70n21b/: Cargo.toml  README.md
pac/atsams70n21b/src/: aes.rs  generic.rs  isi.rs  lib.rs  lockbit.rs  spi0.rs
pac/atsams70q19/: Cargo.toml  README.md
pac/atsams70q19/src/: aes.rs  efc.rs  lib.rs  lockbit.rs  qspi.rs  sdramc.rs  smc.rs  usbhs.rs
pac/atsams70q21b/: Cargo.toml  README.md
pac/atsams70q21b/src/: afec0.rs  hsmci.rs  lib.rs  matrix.rs  smc.rs  usbhs.rs  utmi.rs
(+4523 files in other folders)
