[package]
name = "atsamx7x-hal"
version = "0.4.2"
# in no particular order
authors = [
        "Michal Fita <michal.fita@gmail.com>",
        "Viktor Sonesten <viktor.sonesten@grepit.se>",
        "Martin Mörtsell <martin.mortsell@grepit.se>",
        "Ivar Jönsson <ivar.jonsson@grepit.se>",
]
license = "MIT OR Apache-2.0"
description = "HAL and peripheral access API for ATSAME70, ATSAMS70, ATSAMV70, and ATSAMV71 microcontrollers"
categories = [
    "embedded",
    "hardware-support",
    "no-std"
]
keywords = [
    "no-std",
    "arm",
    "cortex-m",
    "embedded-hal",
    "hal"
]
repository = "https://github.com/atsams-rs/atsamx7x-rust"
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
embedded-hal = { version = "0.2.7" }
nb = "1"
fugit = "0.3.6"
paste = "1"
usb-device = "0.2.9"
bit-iter = "1"
rtic-monotonic = "1"
void = { version = "1", default-features = false }
strum = { version = "0.24.1", default-features = false, features = ["derive"]}
cfg-if = "1"
mcan-core = { version = "0.2", optional = true }

atsame70j19b = { version = "0.26.0", path = "../pac/atsame70j19b", optional = true }
atsame70j20b = { version = "0.26.0", path = "../pac/atsame70j20b", optional = true }
atsame70j21b = { version = "0.26.0", path = "../pac/atsame70j21b", optional = true }
atsame70n19b = { version = "0.26.0", path = "../pac/atsame70n19b", optional = true }
atsame70n20b = { version = "0.26.0", path = "../pac/atsame70n20b", optional = true }
atsame70n21b = { version = "0.26.0", path = "../pac/atsame70n21b", optional = true }
atsame70q19b = { version = "0.26.0", path = "../pac/atsame70q19b", optional = true }
atsame70q20b = { version = "0.26.0", path = "../pac/atsame70q20b", optional = true }
atsame70q21b = { version = "0.26.0", path = "../pac/atsame70q21b", optional = true }
atsams70j19b = { version = "0.26.0", path = "../pac/atsams70j19b", optional = true }
atsams70j20b = { version = "0.26.0", path = "../pac/atsams70j20b", optional = true }
atsams70j21b = { version = "0.26.0", path = "../pac/atsams70j21b", optional = true }
atsams70n19b = { version = "0.26.0", path = "../pac/atsams70n19b", optional = true }
atsams70n20b = { version = "0.26.0", path = "../pac/atsams70n20b", optional = true }
atsams70n21b = { version = "0.26.0", path = "../pac/atsams70n21b", optional = true }
atsams70q19b = { version = "0.26.0", path = "../pac/atsams70q19b", optional = true }
atsams70q20b = { version = "0.26.0", path = "../pac/atsams70q20b", optional = true }
atsams70q21b = { version = "0.26.0", path = "../pac/atsams70q21b", optional = true }
atsamv70j19b = { version = "0.26.0", path = "../pac/atsamv70j19b", optional = true }
atsamv70j20b = { version = "0.26.0", path = "../pac/atsamv70j20b", optional = true }
atsamv70n19b = { version = "0.26.0", path = "../pac/atsamv70n19b", optional = true }
atsamv70n20b = { version = "0.26.0", path = "../pac/atsamv70n20b", optional = true }
atsamv70q19b = { version = "0.26.0", path = "../pac/atsamv70q19b", optional = true }
atsamv70q20b = { version = "0.26.0", path = "../pac/atsamv70q20b", optional = true }
atsamv71j19b = { version = "0.26.0", path = "../pac/atsamv71j19b", optional = true }
atsamv71j20b = { version = "0.26.0", path = "../pac/atsamv71j20b", optional = true }
atsamv71j21b = { version = "0.26.0", path = "../pac/atsamv71j21b", optional = true }
atsamv71n19b = { version = "0.26.0", path = "../pac/atsamv71n19b", optional = true }
atsamv71n20b = { version = "0.26.0", path = "../pac/atsamv71n20b", optional = true }
atsamv71n21b = { version = "0.26.0", path = "../pac/atsamv71n21b", optional = true }
atsamv71q19b = { version = "0.26.0", path = "../pac/atsamv71q19b", optional = true }
atsamv71q20b = { version = "0.26.0", path = "../pac/atsamv71q20b", optional = true }
atsamv71q21b = { version = "0.26.0", path = "../pac/atsamv71q21b", optional = true }

[features]
# Internal-only feature flags; do not set directly.
# Refer to §2 in the data sheet.
## Refer to §2.
v71 = ["can"]
v70 = ["can"]
e70 = ["can"]
s70 = []
pins-64 = []    # J variants
pins-100 = []   # N variants
pins-144 = []   # Q variants
flash-2M = []   # "21"-suffix
flash-1M = []   # "20"-suffix
flash-512K = [] # "19"-suffix
can = ["mcan-core"]

device-selected = []

unproven = ["embedded-hal/unproven"]
usart-spi-host-without-select = []
reconfigurable-system-pins = []

same70j19b = ["atsame70j19b", "e70", "pins-64", "flash-512K", "device-selected"]
same70j19b-rt = ["same70j19b", "atsame70j19b/rt"]
same70j20b = ["atsame70j20b", "e70", "pins-64", "flash-1M", "device-selected"]
same70j20b-rt = ["same70j20b", "atsame70j20b/rt"]
same70j21b = ["atsame70j21b", "e70", "pins-64", "flash-2M", "device-selected"]
same70j21b-rt = ["same70j21b", "atsame70j21b/rt"]
same70n19b = ["atsame70n19b", "e70", "pins-100", "flash-512K", "device-selected"]
same70n19b-rt = ["same70n19b", "atsame70n19b/rt"]
same70n20b = ["atsame70n20b", "e70", "pins-100", "flash-1M", "device-selected"]
same70n20b-rt = ["same70n20b", "atsame70n20b/rt"]
same70n21b = ["atsame70n21b", "e70", "pins-100", "flash-2M", "device-selected"]
same70n21b-rt = ["same70n21b", "atsame70n21b/rt"]
same70q19b = ["atsame70q19b", "e70", "pins-144", "flash-512K", "device-selected"]
same70q19b-rt = ["same70q19b", "atsame70q19b/rt"]
same70q20b = ["atsame70q20b", "e70", "pins-144", "flash-1M", "device-selected"]
same70q20b-rt = ["same70q20b", "atsame70q20b/rt"]
same70q21b = ["atsame70q21b", "e70", "pins-144", "flash-2M", "device-selected"]
same70q21b-rt = ["same70q21b", "atsame70q21b/rt"]

sams70j19b = ["atsams70j19b", "s70", "pins-64", "flash-512K", "device-selected"]
sams70j19b-rt = ["sams70j19b", "atsams70j19b/rt"]
sams70j20b = ["atsams70j20b", "s70", "pins-64", "flash-1M", "device-selected"]
sams70j20b-rt = ["sams70j20b", "atsams70j20b/rt"]
sams70j21b = ["atsams70j21b", "s70", "pins-64", "flash-2M", "device-selected"]
sams70j21b-rt = ["sams70j21b", "atsams70j21b/rt"]
sams70n19b = ["atsams70n19b", "s70", "pins-100", "flash-512K", "device-selected"]
sams70n19b-rt = ["sams70n19b", "atsams70n19b/rt"]
sams70n20b = ["atsams70n20b", "s70", "pins-100", "flash-1M", "device-selected"]
sams70n20b-rt = ["sams70n20b", "atsams70n20b/rt"]
sams70n21b = ["atsams70n21b", "s70", "pins-100", "flash-2M", "device-selected"]
sams70n21b-rt = ["sams70n21b", "atsams70n21b/rt"]
sams70q19b = ["atsams70q19b", "s70", "pins-144", "flash-512K", "device-selected"]
sams70q19b-rt = ["sams70q19b", "atsams70q19b/rt"]
sams70q20b = ["atsams70q20b", "s70", "pins-144", "flash-1M", "device-selected"]
sams70q20b-rt = ["sams70q20b", "atsams70q20b/rt"]
sams70q21b = ["atsams70q21b", "s70", "pins-144", "flash-2M", "device-selected"]
sams70q21b-rt = ["sams70q21b", "atsams70q21b/rt"]

samv70j19b = ["atsamv70j19b", "v70", "pins-64", "flash-512K", "device-selected"]
samv70j19b-rt = ["samv70j19b", "atsamv70j19b/rt"]
samv70j20b = ["atsamv70j20b", "v70", "pins-64", "flash-1M", "device-selected"]
samv70j20b-rt = ["samv70j20b", "atsamv70j20b/rt"]
samv70n19b = ["atsamv70n19b", "v70", "pins-100", "flash-512K", "device-selected"]
samv70n19b-rt = ["samv70n19b", "atsamv70n19b/rt"]
samv70n20b = ["atsamv70n20b", "v70", "pins-100", "flash-1M", "device-selected"]
samv70n20b-rt = ["samv70n20b", "atsamv70n20b/rt"]
samv70q19b = ["atsamv70q19b", "v70", "pins-144", "flash-512K", "device-selected"]
samv70q19b-rt = ["samv70q19b", "atsamv70q19b/rt"]
samv70q20b = ["atsamv70q20b", "v70", "pins-144", "flash-1M", "device-selected"]
samv70q20b-rt = ["samv70q20b", "atsamv70q20b/rt"]

samv71j19b = ["atsamv71j19b", "v71", "pins-64", "flash-512K", "device-selected"]
samv71j19b-rt = ["samv71j19b", "atsamv71j19b/rt"]
samv71j20b = ["atsamv71j20b", "v71", "pins-64", "flash-1M", "device-selected"]
samv71j20b-rt = ["samv71j20b", "atsamv71j20b/rt"]
samv71j21b = ["atsamv71j21b", "v71", "pins-64", "flash-2M", "device-selected"]
samv71j21b-rt = ["samv71j21b", "atsamv71j21b/rt"]
samv71n19b = ["atsamv71n19b", "v71", "pins-100", "flash-512K", "device-selected"]
samv71n19b-rt = ["samv71n19b", "atsamv71n19b/rt"]
samv71n20b = ["atsamv71n20b", "v71", "pins-100", "flash-1M", "device-selected"]
samv71n20b-rt = ["samv71n20b", "atsamv71n20b/rt"]
samv71n21b = ["atsamv71n21b", "v71", "pins-100", "flash-2M", "device-selected"]
samv71n21b-rt = ["samv71n21b", "atsamv71n21b/rt"]
samv71q19b = ["atsamv71q19b", "v71", "pins-144", "flash-512K", "device-selected"]
samv71q19b-rt = ["samv71q19b", "atsamv71q19b/rt"]
samv71q20b = ["atsamv71q20b", "v71", "pins-144", "flash-1M", "device-selected"]
samv71q20b-rt = ["samv71q20b", "atsamv71q20b/rt"]
samv71q21b = ["atsamv71q21b", "v71", "pins-144", "flash-2M", "device-selected"]
samv71q21b-rt = ["samv71q21b", "atsamv71q21b/rt"]

[package.metadata.docs.rs]
# docs.rs build target
default-target = "thumbv7em-none-eabihf"

# enable features to get maximum doc coverage
features = ["samv71q21b-rt", "unproven", "usart-spi-host-without-select", "reconfigurable-system-pins"]
