[package]
name = "atsamx7x-hal"
version = "0.4.3-alpha3"
# in no particular order
authors = [
        "Michal Fita <michal.fita@gmail.com>",
        "Viktor Sonesten <viktor.sonesten@grepit.se>",
        "Martin Mörtsell <martin.mortsell@grepit.se>",
        "Ivar Jönsson <ivar.jonsson@grepit.se>",
]
license = "MIT OR Apache-2.0"
description = "HAL and peripheral access API for ATSAME70, ATSAMS70, ATSAMV70, and ATSAMV71 microcontrollers"
categories = [
    "embedded",
    "hardware-support",
    "no-std"
]
keywords = [
    "no-std",
    "arm",
    "cortex-m",
    "embedded-hal",
    "hal"
]
repository = "https://github.com/atsams-rs/atsamx7x-rust"
readme = "README.md"
edition = "2021"
rust-version = "1.70"

[dependencies]
cortex-m = { version = "0.7" }
embedded-hal = { version = "0.2.7" }
nb = "1"
fugit = "0.3.6"
paste = "1"
usb-device = "0.2.9"
bit-iter = "1"
rtic-monotonic = "1"
void = { version = "1", default-features = false }
strum = { version = "0.24.1", default-features = false, features = ["derive"]}
cfg-if = "1"
mcan-core = { version = "0.2", optional = true }
atsame70j19b = { version = "0.29.0-alpha3", optional = true }
atsame70j20b = { version = "0.29.0-alpha3", optional = true }
atsame70j21b = { version = "0.29.0-alpha3", optional = true }
atsame70n19b = { version = "0.29.0-alpha3", optional = true }
atsame70n20b = { version = "0.29.0-alpha3", optional = true }
atsame70n21b = { version = "0.29.0-alpha3", optional = true }
atsame70q19b = { version = "0.29.0-alpha3", optional = true }
atsame70q20b = { version = "0.29.0-alpha3", optional = true }
atsame70q21b = { version = "0.29.0-alpha3", optional = true }
atsams70j19b = { version = "0.29.0-alpha3", optional = true }
atsams70j20b = { version = "0.29.0-alpha3", optional = true }
atsams70j21b = { version = "0.29.0-alpha3", optional = true }
atsams70n19b = { version = "0.29.0-alpha3", optional = true }
atsams70n20b = { version = "0.29.0-alpha3", optional = true }
atsams70n21b = { version = "0.29.0-alpha3", optional = true }
atsams70q19b = { version = "0.29.0-alpha3", optional = true }
atsams70q20b = { version = "0.29.0-alpha3", optional = true }
atsams70q21b = { version = "0.29.0-alpha3", optional = true }
atsamv70j19b = { version = "0.29.0-alpha3", optional = true }
atsamv70j20b = { version = "0.29.0-alpha3", optional = true }
atsamv70n19b = { version = "0.29.0-alpha3", optional = true }
atsamv70n20b = { version = "0.29.0-alpha3", optional = true }
atsamv70q19b = { version = "0.29.0-alpha3", optional = true }
atsamv70q20b = { version = "0.29.0-alpha3", optional = true }
atsamv71j19b = { version = "0.29.0-alpha3", optional = true }
atsamv71j20b = { version = "0.29.0-alpha3", optional = true }
atsamv71j21b = { version = "0.29.0-alpha3", optional = true }
atsamv71n19b = { version = "0.29.0-alpha3", optional = true }
atsamv71n20b = { version = "0.29.0-alpha3", optional = true }
atsamv71n21b = { version = "0.29.0-alpha3", optional = true }
atsamv71q19b = { version = "0.29.0-alpha3", optional = true }
atsamv71q20b = { version = "0.29.0-alpha3", optional = true }
atsamv71q21b = { version = "0.29.0-alpha3", optional = true }

[patch.crates-io]
atsame70j19b = { path = "../../atsamx7x-pac/pac/atsame70j19b" }
atsame70j20b = { path = "../../atsamx7x-pac/pac/atsame70j20b" }
atsame70j21b = { path = "../../atsamx7x-pac/pac/atsame70j21b" }
atsame70n19b = { path = "../../atsamx7x-pac/pac/atsame70n19b" }
atsame70n20b = { path = "../../atsamx7x-pac/pac/atsame70n20b" }
atsame70n21b = { path = "../../atsamx7x-pac/pac/atsame70n21b" }
atsame70q19b = { path = "../../atsamx7x-pac/pac/atsame70q19b" }
atsame70q20b = { path = "../../atsamx7x-pac/pac/atsame70q20b" }
atsame70q21b = { path = "../../atsamx7x-pac/pac/atsame70q21b" }
atsams70j19b = { path = "../../atsamx7x-pac/pac/atsams70j19b" }
atsams70j20b = { path = "../../atsamx7x-pac/pac/atsams70j20b" }
atsams70j21b = { path = "../../atsamx7x-pac/pac/atsams70j21b" }
atsams70n19b = { path = "../../atsamx7x-pac/pac/atsams70n19b" }
atsams70n20b = { path = "../../atsamx7x-pac/pac/atsams70n20b" }
atsams70n21b = { path = "../../atsamx7x-pac/pac/atsams70n21b" }
atsams70q19b = { path = "../../atsamx7x-pac/pac/atsams70q19b" }
atsams70q20b = { path = "../../atsamx7x-pac/pac/atsams70q20b" }
atsams70q21b = { path = "../../atsamx7x-pac/pac/atsams70q21b" }
atsamv70j19b = { path = "../../atsamx7x-pac/pac/atsamv70j19b" }
atsamv70j20b = { path = "../../atsamx7x-pac/pac/atsamv70j20b" }
atsamv70n19b = { path = "../../atsamx7x-pac/pac/atsamv70n19b" }
atsamv70n20b = { path = "../../atsamx7x-pac/pac/atsamv70n20b" }
atsamv70q19b = { path = "../../atsamx7x-pac/pac/atsamv70q19b" }
atsamv70q20b = { path = "../../atsamx7x-pac/pac/atsamv70q20b" }
atsamv71j19b = { path = "../../atsamx7x-pac/pac/atsamv71j19b" }
atsamv71j20b = { path = "../../atsamx7x-pac/pac/atsamv71j20b" }
atsamv71j21b = { path = "../../atsamx7x-pac/pac/atsamv71j21b" }
atsamv71n19b = { path = "../../atsamx7x-pac/pac/atsamv71n19b" }
atsamv71n20b = { path = "../../atsamx7x-pac/pac/atsamv71n20b" }
atsamv71n21b = { path = "../../atsamx7x-pac/pac/atsamv71n21b" }
atsamv71q19b = { path = "../../atsamx7x-pac/pac/atsamv71q19b" }
atsamv71q20b = { path = "../../atsamx7x-pac/pac/atsamv71q20b" }
atsamv71q21b = { path = "../../atsamx7x-pac/pac/atsamv71q21b" }

[features]
# Internal-only feature flags; do not set directly.
# Refer to §2 in the data sheet.
## Refer to §2.
__v71 = ["can"]
__v70 = ["can"]
__e70 = ["can"]
__s70 = []
__pins-64 = []    # J variants
__pins-100 = []   # N variants
__pins-144 = []   # Q variants
__flash-2M = []   # "21"-suffix
__flash-1M = []   # "20"-suffix
__flash-512K = [] # "19"-suffix
__device-selected = []

# External feature flags; part of the interface.
can = ["mcan-core"]
unproven = ["embedded-hal/unproven"]
usart-spi-host-without-select = []
reconfigurable-system-pins = []

same70j19b = ["atsame70j19b", "__e70", "__pins-64", "__flash-512K", "__device-selected"]
same70j20b = ["atsame70j20b", "__e70", "__pins-64", "__flash-1M", "__device-selected"]
same70j21b = ["atsame70j21b", "__e70", "__pins-64", "__flash-2M", "__device-selected"]
same70n19b = ["atsame70n19b", "__e70", "__pins-100", "__flash-512K", "__device-selected"]
same70n20b = ["atsame70n20b", "__e70", "__pins-100", "__flash-1M", "__device-selected"]
same70n21b = ["atsame70n21b", "__e70", "__pins-100", "__flash-2M", "__device-selected"]
same70q19b = ["atsame70q19b", "__e70", "__pins-144", "__flash-512K", "__device-selected"]
same70q20b = ["atsame70q20b", "__e70", "__pins-144", "__flash-1M", "__device-selected"]
same70q21b = ["atsame70q21b", "__e70", "__pins-144", "__flash-2M", "__device-selected"]

sams70j19b = ["atsams70j19b", "__s70", "__pins-64", "__flash-512K", "__device-selected"]
sams70j20b = ["atsams70j20b", "__s70", "__pins-64", "__flash-1M", "__device-selected"]
sams70j21b = ["atsams70j21b", "__s70", "__pins-64", "__flash-2M", "__device-selected"]
sams70n19b = ["atsams70n19b", "__s70", "__pins-100", "__flash-512K", "__device-selected"]
sams70n20b = ["atsams70n20b", "__s70", "__pins-100", "__flash-1M", "__device-selected"]
sams70n21b = ["atsams70n21b", "__s70", "__pins-100", "__flash-2M", "__device-selected"]
sams70q19b = ["atsams70q19b", "__s70", "__pins-144", "__flash-512K", "__device-selected"]
sams70q20b = ["atsams70q20b", "__s70", "__pins-144", "__flash-1M", "__device-selected"]
sams70q21b = ["atsams70q21b", "__s70", "__pins-144", "__flash-2M", "__device-selected"]

samv70j19b = ["atsamv70j19b", "__v70", "__pins-64", "__flash-512K", "__device-selected"]
samv70j20b = ["atsamv70j20b", "__v70", "__pins-64", "__flash-1M", "__device-selected"]
samv70n19b = ["atsamv70n19b", "__v70", "__pins-100", "__flash-512K", "__device-selected"]
samv70n20b = ["atsamv70n20b", "__v70", "__pins-100", "__flash-1M", "__device-selected"]
samv70q19b = ["atsamv70q19b", "__v70", "__pins-144", "__flash-512K", "__device-selected"]
samv70q20b = ["atsamv70q20b", "__v70", "__pins-144", "__flash-1M", "__device-selected"]

samv71j19b = ["atsamv71j19b", "__v71", "__pins-64", "__flash-512K", "__device-selected"]
samv71j20b = ["atsamv71j20b", "__v71", "__pins-64", "__flash-1M", "__device-selected"]
samv71j21b = ["atsamv71j21b", "__v71", "__pins-64", "__flash-2M", "__device-selected"]
samv71n19b = ["atsamv71n19b", "__v71", "__pins-100", "__flash-512K", "__device-selected"]
samv71n20b = ["atsamv71n20b", "__v71", "__pins-100", "__flash-1M", "__device-selected"]
samv71n21b = ["atsamv71n21b", "__v71", "__pins-100", "__flash-2M", "__device-selected"]
samv71q19b = ["atsamv71q19b", "__v71", "__pins-144", "__flash-512K", "__device-selected"]
samv71q20b = ["atsamv71q20b", "__v71", "__pins-144", "__flash-1M", "__device-selected"]
samv71q21b = ["atsamv71q21b", "__v71", "__pins-144", "__flash-2M", "__device-selected"]

rt = ["atsame70j19b?/rt", "atsame70j20b?/rt", "atsame70j21b?/rt",
      "atsame70n19b?/rt", "atsame70n20b?/rt", "atsame70n21b?/rt",
      "atsame70q19b?/rt", "atsame70q20b?/rt", "atsame70q21b?/rt",
      "atsams70j19b?/rt", "atsams70j20b?/rt", "atsams70j21b?/rt",
      "atsams70n19b?/rt", "atsams70n20b?/rt", "atsams70n21b?/rt",
      "atsams70q19b?/rt", "atsams70q20b?/rt", "atsams70q21b?/rt",
      "atsamv70j19b?/rt", "atsamv70j20b?/rt", "atsamv70n19b?/rt",
      "atsamv70n20b?/rt", "atsamv70q19b?/rt", "atsamv70q20b?/rt",
      "atsamv71j19b?/rt", "atsamv71j20b?/rt", "atsamv71j21b?/rt",
      "atsamv71n19b?/rt", "atsamv71n20b?/rt", "atsamv71n21b?/rt",
      "atsamv71q19b?/rt", "atsamv71q20b?/rt", "atsamv71q21b?/rt"]

critical-section = [
      "atsame70j19b?/critical-section", "atsame70j20b?/critical-section",
      "atsame70j21b?/critical-section", "atsame70n19b?/critical-section",
      "atsame70n20b?/critical-section", "atsame70n21b?/critical-section",
      "atsame70q19b?/critical-section", "atsame70q20b?/critical-section",
      "atsame70q21b?/critical-section", "atsams70j19b?/critical-section",
      "atsams70j20b?/critical-section", "atsams70j21b?/critical-section",
      "atsams70n19b?/critical-section", "atsams70n20b?/critical-section",
      "atsams70n21b?/critical-section", "atsams70q19b?/critical-section",
      "atsams70q20b?/critical-section", "atsams70q21b?/critical-section",
      "atsamv70j19b?/critical-section", "atsamv70j20b?/critical-section",
      "atsamv70n19b?/critical-section", "atsamv70n20b?/critical-section",
      "atsamv70q19b?/critical-section", "atsamv70q20b?/critical-section",
      "atsamv71j19b?/critical-section", "atsamv71j20b?/critical-section",
      "atsamv71j21b?/critical-section", "atsamv71n19b?/critical-section",
      "atsamv71n20b?/critical-section", "atsamv71n21b?/critical-section",
      "atsamv71q19b?/critical-section", "atsamv71q20b?/critical-section",
      "atsamv71q21b?/critical-section"]


[package.metadata.docs.rs]
# docs.rs build target
default-target = "thumbv7em-none-eabihf"

# enable features to get maximum doc coverage
features = ["samv71q21b", "rt", "unproven", "usart-spi-host-without-select", "reconfigurable-system-pins"]
