[package]
name = "atsame70_xpro"
version = "0.2.0"
edition = "2021"
authors = [
    "Viktor Sonesten <viktor.sonesten@grepit.se>"
]
license = "0BSD"

[dependencies]
cortex-m-rtic = "1.0"
cortex-m = "0.7"
panic-halt = "0.2"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
usbd-serial = "0.1.1"
heapless = "0.7"

[dependencies.atsamx7x-hal]
version = "0.1.0"
path = "../../hal"
features = ["same70q21b-rt", "unproven"]

[profile.dev]
debug = true
lto = true