[package]
name = "atsame70_xpro"
version = "0.4.2"
edition = "2021"
authors = [
    "Viktor Sonesten <viktor.sonesten@grepit.se>"
]
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m-rtic = "1.0"
cortex-m = "0.7.3"
panic-halt = "0.2"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
usbd-serial = "0.1.1"
heapless = "0.7"

[dependencies.atsamx7x-hal]
version = "0.4.2"
path = "../../hal"
features = ["same70q21b-rt", "unproven"]

[profile.dev]
debug = true
lto = true
