[package]
name = "atsams70j20b"
description = "Peripheral access API for the ATSAMS70J20B MCU from Microchip (generated using svd2rust)"
version = "0.26.0"
license = "MIT OR Apache-2.0"
authors = ["Michal Fita <michal.fita@gmail.com>", "Viktor Sonesten <viktor.sonesten@grepit.se>"]
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["no-std", "arm", "cortex-m", "atsam", "pac"]
repository = "https://github.com/atsams-rs/atsamx7x-rust"
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"

[dependencies]
cortex-m = "0.7.3"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.3"

[features]
rt = ["cortex-m-rt/device"]

[lib]
name = "atsams70j20b"
path = "src/lib.rs"
